--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "railway-db-backup",
+  "version": "1.0.0",
+  "main": "backup.js",
+  "scripts": {
+    "backup": "node backup.js backup",
+    "backup-data": "node backup.js backup-data",
+    "restore": "node backup.js restore"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
     "dotenv": "^17.2.3"
