--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -2,7 +2,7 @@ name: Daily Automated Backup to Backblaze B2
 
 on:
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: "0 20 * * *"
   workflow_dispatch:
 
 jobs:
