--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   backup:
     runs-on: ubuntu-latest
+    environment: beer-titos
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
