--- a/.github/workflows/beer-titos.yml
+++ b/.github/workflows/beer-titos.yml
@@ -2,7 +2,7 @@ name: Beer Titos Backup to Backblaze B2
 
 on:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "0 20 * * *"
   workflow_dispatch:
 
 jobs:
